@@ -55,7 +55,6 @@ setup(
                       'zope.app.publisher',
                       'zope.app.renderer',
                       'zope.app.security',
-                      'zope.app.securitypolicy',
                       'zope.app.testing',
                       'zope.app.twisted',
                       'zope.app.zcmlfiles',
@@ -74,6 +73,7 @@ setup(
                       'zope.publisher',
                       'zope.schema',
                       'zope.security',
+                      'zope.securitypolicy',
                       'zope.testing',
                       'zope.traversing',
                       'zope.testbrowser',
