@@ -5,7 +5,7 @@
 
   <include package="zope.security" file="meta.zcml" />
   <include package="zope.i18n" file="meta.zcml" />
-  <include package="zope.app.securitypolicy" file="meta.zcml" />
+  <include package="zope.securitypolicy" file="meta.zcml" />
   <include package="zope.app.zcmlfiles" file="meta.zcml" />
   <include package="grok" file="meta.zcml" />
 
@@ -14,11 +14,11 @@
   <include package="zope.formlib" />
   <include package="zope.i18n.locales" />
   <include package="zope.publisher" />
+  <include package="zope.securitypolicy" />
   <include package="zope.size" />
   <include package="zope.traversing" />
   <include package="zope.traversing.browser" />
   <include package="zope.app.zcmlfiles" />
-  <include package="zope.app.securitypolicy" />
   <include package="zope.app.authentication" />
   <include package="zope.app.intid" />
   <include package="zope.app.keyreference" />
