@@ -48,7 +48,6 @@ zope.app.renderer = 3.4.0a1
 zope.app.rotterdam = 3.4.0a1
 zope.app.schema = 3.4.0a1
 zope.app.security = 3.4.0a1-1
-zope.app.securitypolicy = 3.4.6
 zope.app.server = 3.4.0a1-4
 zope.app.session = 3.4.0a1
 zope.app.skins = 3.4.0a1
@@ -88,6 +87,7 @@ zope.proxy = 3.4.0
 zope.publisher = 3.5.0a1.dev-r78838
 zope.schema = 3.4.0
 zope.security = 3.4.0b5
+zope.securitypolicy = 3.4.0
 zope.server = 3.5.0a2
 zope.session = 3.4.1
 zope.size = 3.4.0
